Fix message quote spacing.

--- a/res/themes/chalk.css
+++ b/res/themes/chalk.css
@@ -211,6 +211,8 @@ p {
 
 
 .message-quote {
+  margin-top: 0px;
+  margin-bottom: 0px;
   color: #4dd0e1;
 }
 
