--- a/res/themes/fruity.css
+++ b/res/themes/fruity.css
@@ -196,6 +196,8 @@ p {
 }
 
 .message-quote {
+  margin-top: 0px;
+  margin-bottom: 0px;
   color: blue; 
 }
 
