--- a/res/themes/midi.css
+++ b/res/themes/midi.css
@@ -164,6 +164,8 @@ a:hover {
 
 
 .message-quote {
+  margin-top: 0px;
+  margin-bottom: 0px;
   color: violet;
 }
 
