--- a/res/themes/photon dark.css
+++ b/res/themes/photon dark.css
@@ -192,6 +192,8 @@ p {
 }
 
 .message-quote {
+  margin-top: 0px;
+  margin-bottom: 0px;
   color: #789922;
 }
 
