--- a/res/themes/photon.css
+++ b/res/themes/photon.css
@@ -191,6 +191,8 @@ p {
 }
 
 .message-quote {
+  margin-top: 0px;
+  margin-bottom: 0px;
   color: #789922;
 }
 
